Fixes for BS5 and dark mode.

--- a/theme/aplus/static/default.css
+++ b/theme/aplus/static/default.css
@@ -6,15 +6,15 @@ special components. Generic and body-level rules come from the A+ system. */
 
 .admonition {
   min-height: 42px;
-  padding: 1.5rem;
-  margin-bottom: 2rem;
+  padding: 1rem;
+  margin-bottom: 1.5rem;
   border: 1px solid transparent;
   border-radius: 4px;
   margin-left: 0;
   margin-right: 0;
-  margin-top: 1.5rem;
+  margin-top: 1rem;
   /* default colors */
-  color: var(--bs-secondary-text, #606060);
+  color: var(--bs-secondary-color, #606060);
   background-color: var(--bs-secondary-bg, #e8e8e8);
   border-color: var(--bs-border-color, #d7d7d7);
 }
@@ -28,7 +28,7 @@ special components. Generic and body-level rules come from the A+ system. */
   margin: 0px 0px 0.5rem;
 }
 
-.admonition .last {
+.admonition .last, .admonition p:last-child {
   margin-bottom: 0;
 }
 
@@ -193,7 +193,7 @@ div.topic {
   background-color: var(--bs-primary-bg-subtle, #ddf1fb);
 }
 
-.admonition, .topic {
+.topic {
   min-height: 42px;
   padding: 15px;
   margin-bottom: 20px;
@@ -609,6 +609,7 @@ div.math:hover a.headerlink {
   margin: 20px 0;
   padding: 0;
   width: inherit;
+  min-height: 35px;
 }
 
 .no-poi-box {
@@ -632,7 +633,7 @@ div.math:hover a.headerlink {
 .poi-title {
   width: 80%;
   float: left;
-  height: 20px;
+  min-height: 20px;
   font-weight: bold;
   font-size: 1.2em;
   padding-left: 0;
@@ -648,8 +649,7 @@ div.math:hover a.headerlink {
 
 .poi-icon {
   margin: 0 10px;
-  vertical-align: baseline;
-  height: 20px;
+  font-size: 1.5rem;
 }
 
 .borderless .poi-content {
